--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -1,14 +1,13 @@
-# Template for NextJS environment variables.
+# ENS Farcaster - Environment Variables
 
-# For local development, copy this file, rename it to .env.local, and fill in the values.
-# When deploying live, you'll need to store the vars in Vercel/System config.
+# RPC Configuration (Required)
+# Get your free Infura key at: https://infura.io/
+NEXT_PUBLIC_SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/YOUR_INFURA_KEY
 
-# If not set, we provide default values (check `scaffold.config.ts`) so developers can start prototyping out of the box,
-# but we recommend getting your own API Keys for Production Apps.
+# Alchemy API Key (Optional - for additional RPC backup)
+# Get your key at: https://dashboard.alchemy.com/
+NEXT_PUBLIC_ALCHEMY_API_KEY=your_alchemy_api_key
 
-# To access the values stored in this env file you can use: process.env.VARIABLENAME
-# You'll need to prefix the variables names with NEXT_PUBLIC_ if you want to access them on the client side.
-# More info: https://nextjs.org/docs/pages/building-your-application/configuring/environment-variables
-NEXT_PUBLIC_ALCHEMY_API_KEY=
-NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
-
+# WalletConnect Project ID (Optional - for wallet connections)
+# Get your project ID at: https://cloud.walletconnect.com/
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=your_walletconnect_project_id
